--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<div class="wraper">
 			<div class="child-box"></div>
+			<div class="child-box2"></div>
 			
 		</div>
 	</section>
