--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 			<div class="child-box2"></div>
 			
 		</div>
+		<div class="image-wraper">
+		<img  class="img1" src="image/image.jpg" alt="photo">
+		<p class="text-image">text massage</p>
+		</div>
+
+
 	</section>
 
 </body>
